// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/api/v2alpha/crypto.proto";
import "wfa/measurement/api/v2alpha/data_provider.proto";
import "wfa/measurement/api/v2alpha/sketch.proto";

option java_package = "org.wfanet.measurement.api.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "RequisitionSpecProto";

// Specification for a `MetricRequisition` which can be cryptographically
// signed.
message RequisitionSpec {
  // Filter to apply to metric events.
  message EventFilter {
    // Age, gender identity, viewable duration, etc.
    // TODO: Design and add filter predicates.
    message Predicate {}

    // Filter term where all `Predicate`s and nested `Conjunction`s are
    // logically ORed.
    message Disjunction {
      // `Predicates` which are logically ORed.
      repeated Predicate predicates = 1;

      // Nested `Conjunction`s.
      repeated Conjunction and = 2;
    }

    // Filter term where all `Predicate`s and nested `Disjunction`s are
    // logically ANDed.
    message Conjunction {
      // `Predicates` which are logically ANDed.
      repeated Predicate predicates = 1;

      // Nested `Disjunction`s.
      repeated Disjunction or = 2;
    }

    oneof term {
      Conjunction and = 1;
      Disjunction or = 2;
    }
  }
  message EventGroupEntry {
    // Resource key of the `EventGroup` that this entry is for. Required.
    EventGroup.Key event_group = 1;

    // Time interval over which the metric should be collected. Required.
    TimeInterval collection_interval = 2;

    // Optional filter to apply to metric events.
    EventFilter filter = 3;
  }
  // The requisition entry for each `EventGroup`. This can be logically
  // represented as a map uniquely keyed by `EventGroup.Key`. Required.
  // Immutable.
  //
  // All of the `EventGroup`s must belong to the same parent `DataProvider`
  // as this `MetricRequisition`.
  repeated EventGroupEntry event_group_entries = 1;

  // Encryption public key for the `Measurement` that this `RequisitionSpec` is
  // associated with. Required. Immutable.
  bytes measurement_public_key = 2;

  // SHA256 hash of the concatenation of `serialized_data_provider_list` and
  // `data_provider_list_salt` from the `Measurement` that this
  // `RequistionSpec` is associated with. Required. Immutable.
  bytes data_provider_list_hash = 3;
}

// Representation of a metric to be collected.
message MetricDefinition {
  // Representation of a metric to be collected as a sketch.
  message Sketch {
    // Resource key of the sketch configuration. Required.
    SketchConfig.Key sketch_config = 1;
  }

  // Exactly one of these must be specified.
  oneof definition {
    // A metric to be collected as a sketch.
    Sketch sketch = 1;
  }

  // The resource key of the CombinedPublicKey that is used to encrypt the
  // metric value. Required. Immutable.
  CombinedPublicKey.Key combined_public_key = 2;

  // Encryption public key for the `Measurement` that this `MetricDefinition` is
  // associated with. Required. Immutable.
  bytes measurement_public_key = 3;
}

// A time interval.
message TimeInterval {
  // Start of the time interval, inclusive. Required.
  google.protobuf.Timestamp start_time = 1;
  // End of the time interval, exclusive. Required. This must be later than
  // the start time.
  google.protobuf.Timestamp end_time = 2;
}
